force-app/main/default/objects/Formulaire__mdt/Formulaire__mdt.object-meta.xml
<CustomObject>
    <label>Formulaire</label>
    <pluralLabel>Formulaires</pluralLabel>
</CustomObject>