force-app/main/default/objects/Formulaire__mdt/fields/Formulaire__c.field-meta.xml
<CustomField>
    <fullName>Formulaire__c</fullName>
    <label>Formulaire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commander</fullName>
                <default>true</default>
                <label>Commander</label>
            </value>
            <value>
                <fullName>Nous contacter</fullName>
            </value>
            <value>
                <fullName>Planifier un RDV</fullName>
            </value>
            <value>
                <fullName>Absence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>