force-app/main/default/objects/Formulaire__mdt/fields/Sous_type_SF__c.field-meta.xml
<CustomField>
    <fullName>Sous_type_SF__c</fullName>
    <label>Sous_type_SF</label>
    <length>128</length>
    <type>Text</type>
</CustomField>