force-app/main/default/objects/Formulaire__mdt/fields/Type_portail__c.field-meta.xml
<CustomField>
    <fullName>Type_portail__c</fullName>
    <label>Type portail</label>
    <type>TextArea</type>
</CustomField>