force-app/main/default/objects/Formulaire__mdt/fields/Type_SF__c.field-meta.xml
<CustomField>
    <fullName>Type_SF__c</fullName>
    <label>Type SF</label>
    <type>TextArea</type>
</CustomField>