force-app/main/default/objects/Formulaire__mdt/fields/user_type__c.field-meta.xml
<CustomField>
    <fullName>user_type__c</fullName>
    <label>user type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AIP</fullName>
                <default>true</default>
                <label>AIP</label>
            </value>
            <value>
                <fullName>MMAT/PaME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>